# InterviewPractice

./: CMakeLists.txt  main.cpp
DataStructures/JRLinkedList/: JRLinkedList.cpp  JRLinkedList.h  JRLinkedListNode.cpp  JRLinkedListNode.h
DataStructures/JRQueue/: Queue.cpp  Queue.h
DataStructures/JRStack/: Stack.cpp  Stack.h  StackNode.cpp  StackNode.h
Tests/JRLinkedList/: Test_JRLinkedList.cpp
Tests/JRStack/: Test_Stack.cpp
cracking_code_interview/: solutions1.cpp  solutions1.h
